# wexpect-uv

./: .gitignore  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/workflows/: release.yml
.github/workflows/: release.yml
issues/: output_loss.py  spawn_pipe_expect_timeout_issue.py
scripts/: get-version.py
src/wexpect/: __init__.py  console_reader.py  host.py  legacy_wexpect.py  wexpect_util.py
